Update 메모리 구조 및 데이터 할당 과정.md

--- a/메모리 구조 및 데이터 할당 과정.md
+++ b/메모리 구조 및 데이터 할당 과정.md
@@ -34,9 +34,9 @@ ex) 0 부터 60000 까지 상대주소로 설정한다. 이 주소가 추후 실
 5. 주기억장치의 공간이 가득 찼을 경우, 필요없는 프레임을 삭제하고 요청된 프레임을 저장한다.
 
 ### 결론:
-C언어의 지역함수를 가리키는 포인터를 리턴하여 외부에서 그 포인터에 존재하는 값을 확인하면 여전히 남아있는 것을 보고 왜 지역변수가 할당해제되지 않고 여전히 데이터가 남아있는지 궁금해서 이 공부를 시작했다. 결과적으로 아직 왜 이런지 확실하게 알아내지는 못했고 메모리 구조와 쓰임에 대해 학습하는 시간이 되었다. 몇 가지 자료들을 읽으며 추측할 수 있는 것은, 첫 번째로 MMU는 메모리를 null이나 쓰레기 값으로 초기화할 의무가 없기 때문에 주기억장치에 저장된 데이터가 할당 해제되더라도 초기화 하지 않은면 해당 주소에 데이터가 남아 있을 수 있다. 그래서 Pointer로 주소에 접근시 여전시 데이터가 남아있다. 하지만 동적할당 이후 free를 하면 주소에 접근 자체가 안된다. 이 둘의 차이점을 알아봐야 궁금증이 해결될 것 같다.
+C언어의 지역함수를 가리키는 포인터를 리턴하여 외부에서 그 포인터에 존재하는 값을 확인하면 여전히 남아있는 것을 보고 왜 지역변수가 할당해제되지 않고 여전히 데이터가 남아있는지 궁금해서 이 공부를 시작했다. 결과적으로 아직 왜 이런지 확실하게 알아내지는 못했고 메모리 구조와 쓰임에 대해 학습하는 시간이 되었다. 몇 가지 자료들을 읽으며 추측할 수 있는 것은, 첫 번째로 MMU는 메모리를 null이나 쓰레기 값으로 초기화할 의무가 없기 때문에 주기억장치에 저장된 데이터가 할당 해제되더라도 초기화 하지 않은면 해당 주소에 데이터가 남아 있을 수 있다. 그래서 Pointer로 주소에 접근시 여전시 데이터가 남아있다. 하지만 동적할당 이후 free를 하면 주소에 접근 자체가 안된다. 이 둘의 차이점을 더 알아봐야 이 궁금증이 해결될 것 같다.
 두 번째로는 어떠한 이유로 외부함수에서 내부함수를 여전히 사용하고 있을 경우에 마치 클로저처럼 지역변수가 여전히 남아있다는 것이다. 
-이 부분들은 나중에 C언어를 공부할 필요가 있을 때 다시 살펴보려고한다. 
+이 부분들은 생각보다 시간이 오래걸릴 듯 하여 나중에 C언어를 공부할 필요가 있을 때 다시 살펴보려고 한다. 
 
 ### 다음 공부 자료:
 가비지 콜렉터
