--- a/동시성.md
+++ b/동시성.md
@@ -39,7 +39,7 @@ c에서는 동적인 할당을 위해 존재한다.
 
 ### 1.4. 콜스택
 보통 프로세스에는 코드, 데이터, 힙, 스택 영역의 메모리가 할당되는데
-멀티스레드로 동적하는 경우 프로세스 내부에서 코드, 데이터, 힙영역을 스레드끼리 공유한다. 하지만 스택은 스레드마다 고유의 영역을 가지고 있다. 그럼에도 불구하고 JS는 단일 스레드로 동작하는 언어기 때문에 오직 하나의 스택, 힙 영역만이 존재한다.
+멀티스레드로 동작하는 경우 프로세스 내부에서 코드, 데이터, 힙영역을 스레드끼리 공유한다. 하지만 스택은 스레드마다 고유의 영역을 가지고 있다. 그럼에도 불구하고 JS는 단일 스레드로 동작하는 언어기 때문에 오직 하나의 스택, 힙 영역만이 존재한다.
 Js의 경우 싱글 프로세스, 싱글 스레드이기 때문에 모든 영역이 1개만 존재한다. 
 
 그리고 Js에서는 이 스택을 콜스택이라고 부르는데, 함수가 실행될 때마다 스택에는 frame이라는 하나의 실행 단위가 차곡차곡 쌓이게 된다. 
